blog interview questions

--- a/views/adminAddInterviewQuestions.ejs
+++ b/views/adminAddInterviewQuestions.ejs
@@ -39,7 +39,8 @@
                     <span class="icon-close2 js-menu-toggle"></span>
                 </div>
             </div>
-            <div class="site-mobile-menu-body"></div>
+            <%- include('./adminSideBar.ejs')%>
+
         </div>
 
 
@@ -53,7 +54,7 @@
                             <%-include('./adminHomeHeader.js')%>
                         </nav>
                         <a href="#"
-                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
+                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right">
                             <span class="icon-menu h3"></span></a>
 
                     </div>
