--- a/views/employeeHome.ejs
+++ b/views/employeeHome.ejs
@@ -55,7 +55,7 @@
                 <%-include('./employeeTrainerHomeHeader.js')%>
               <%}%>
             </nav>
-           <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
+           <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right">
             <span class="icon-menu h3"></span></a>
 
           </div>
