--- a/views/home.ejs
+++ b/views/home.ejs
@@ -165,7 +165,7 @@
         <ul class="m-0 p-2">
           <li><a href="/" class="nav-link">Home</a></li>
           <li><a href="" class="nav-link">Courses</a></li>
-          <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
+          <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
           <li><a href="/blog" class="nav-link">Blog</a></li>
           <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
         </ul>
@@ -184,7 +184,7 @@
               <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#courses-section" class="nav-link">Courses</a></li>
-                <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
+                <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
                 <li><a href="/blog" class="nav-link">Blog</a></li>
                 <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
               </ul>
