--- a/views/interviewQuestions.ejs
+++ b/views/interviewQuestions.ejs
@@ -60,13 +60,13 @@
             </div>
             <div class="">
                 <ul class="m-0 p-2">
-                  <li><a href="/" class="nav-link">Home</a></li>
-                  <li><a href="" class="nav-link">Courses</a></li>
-                  <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
-                  <li><a href="/blog" class="nav-link">Blog</a></li>
-                  <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
+                    <li><a href="/" class="nav-link">Home</a></li>
+                    <li><a href="" class="nav-link">Courses</a></li>
+                    <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
+                    <li><a href="/blog" class="nav-link">Blog</a></li>
+                    <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
                 </ul>
-              </div>
+            </div>
         </div>
 
 
@@ -81,7 +81,7 @@
                             <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
                                 <li><a href="#courses-section" class="nav-link">Courses</a></li>
-                                <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
+                                <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
                                 <li><a href="/blog" class="nav-link">Blog</a></li>
                                 <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
                             </ul>
@@ -97,7 +97,7 @@
                             </ul>
                         </nav>
                         <a href="#"
-                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span
+                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right"><span
                                 class="icon-menu h3"></span></a>
                     </div>
                 </div>
@@ -116,112 +116,29 @@
                     </div>
                 </div>
 
-                <div class="p-5 text-black" data-aos="fade-up" data-aos-delay="">
-                    <h5>1. What are React Components?</h5>
-                    <p style="text-align: justify;">React components are the building blocks of a React application.
-                        They encapsulate logic and UI elements, making code reusable and maintainable. There are two
-                        types: functional and class components. Functional components are simpler, using hooks like
-                        useState and useEffect to manage state and side effects. Class components, which extend
-                        React.Component, use lifecycle methods such as componentDidMount and setState for state
-                        management.</p>
-                    <p><b>Company Name : Accenture</b></p>
-
-                    <!-- star rating starts-->
-                    <div class="stars">
-                        <b>Frequency : </b>
-                        <span class="star" data-value="1">&#9733;</span>
-                        <span class="star" data-value="2">&#9733;</span>
-                        <span class="star" data-value="3">&#9733;</span>
-                        <span class="star" data-value="4">&#9733;</span>
-                        <span class="star" data-value="5">&#9733;</span>
-                    </div>
-                    <!-- star rating ends -->
-                </div>
-                <hr data-aos="fade-up" data-aos-delay="">
-                <div class="p-5 text-black" data-aos="fade-up" data-aos-delay="">
-                    <h5>2. What is JSX?</h5>
-                    <p style="text-align: justify;">JSX (JavaScript XML) is a syntax extension for JavaScript used in
-                        React to describe UI structures in a syntax similar to HTML. It allows developers to write
-                        HTML-like code directly inside JavaScript, making UI development more intuitive. JSX gets
-                        compiled into standard JavaScript using Babel before being rendered in the browser. It supports
-                        embedding JavaScript expressions using curly braces ({}), enabling dynamic content rendering.
-                    </p>
-                    <p><b>Company Name : Wipro</b></p>
-                    <!-- star rating starts-->
-                    <div class="stars">
-                        <b>Frequency : </b>
-                        <span class="star" data-value="1">&#9733;</span>
-                        <span class="star" data-value="2">&#9733;</span>
-                        <span class="star" data-value="3">&#9733;</span>
-                        <span class="star" data-value="4">&#9733;</span>
-                        <span class="star" data-value="5">&#9733;</span>
-                    </div>
-                    <!-- star rating ends -->
-
-                </div>
-                <hr data-aos="fade-up" data-aos-delay="">
-                <div class="p-5 text-black" data-aos="fade-up" data-aos-delay="">
-                    <h5>3. What is the Virtual DOM?</h5>
-                    <p style="text-align: justify;">The Virtual DOM (VDOM) is a lightweight JavaScript representation of
-                        the actual DOM. React uses it to optimize performance by reducing direct manipulations of the
-                        real DOM, which are slow and expensive. When a component’s state changes, React creates a new
-                        Virtual DOM tree and compares it with the previous one using a process called reconciliation.
-                        Only the changed parts are updated in the real DOM, improving efficiency.</p>
-                    <p><b>Company Name : TCS</b></p>
-                    <!-- star rating starts-->
-                    <div class="stars">
-                        <b>Frequency : </b>
-                        <span class="star" data-value="1">&#9733;</span>
-                        <span class="star" data-value="2">&#9733;</span>
-                        <span class="star" data-value="3">&#9733;</span>
-                        <span class="star" data-value="4">&#9733;</span>
-                        <span class="star" data-value="5">&#9733;</span>
-                    </div>
-                    <!-- star rating ends -->
-
-                </div>
-                <hr data-aos="fade-up" data-aos-delay="">
-                <div class="p-5 text-black" data-aos="fade-up" data-aos-delay="">
-                    <h5>4. Explain React Hooks?</h5>
-                    <p style="text-align: justify;">React Hooks are functions that let developers use state and
-                        lifecycle features in functional components, eliminating the need for class components.
-                        Introduced in React 16.8, hooks like useState and useEffect enable managing component state and
-                        side effects efficiently. Custom hooks can be created for reusable logic.</p>
-                    <p><b>Company Name : Infosys</b></p>
-                    <!-- star rating starts-->
-                    <div class="stars">
-                        <b>Frequency : </b>
-                        <span class="star" data-value="1">&#9733;</span>
-                        <span class="star" data-value="2">&#9733;</span>
-                        <span class="star" data-value="3">&#9733;</span>
-                        <span class="star" data-value="4">&#9733;</span>
-                        <span class="star" data-value="5">&#9733;</span>
-                    </div>
-                    <!-- star rating ends -->
-
-                </div>
-                <hr data-aos="fade-up" data-aos-delay="">
-                <div class="p-5 text-black" data-aos="fade-up" data-aos-delay="">
-                    <h5>5. What is useState Hook?</h5>
-                    <p style="text-align: justify;">useState is a React Hook that enables functional components to
-                        manage state. It takes an initial state as an argument and returns an array with two elements:
-                        the current state value and a function to update it. This hook allows components to store and
-                        modify values without needing class components.useState is particularly useful for handling UI
-                        interactions like form inputs, toggling elements, and managing counters. Multiple state
-                        variables can be declared within the same component.</p>
-                    <p><b>Company Name : Yash Technologies</b></p>
-                    <!-- star rating starts-->
-                    <div class="stars">
-                        <b>Frequency : </b>
-                        <span class="star" data-value="1">&#9733;</span>
-                        <span class="star" data-value="2">&#9733;</span>
-                        <span class="star" data-value="3">&#9733;</span>
-                        <span class="star" data-value="4">&#9733;</span>
-                        <span class="star" data-value="5">&#9733;</span>
-                    </div>
-                    <!-- star rating ends -->
-
-                </div>
+                <% interviewQuestions.forEach((obj, index)=> { %>
+                    <% let maxLength=Math.max(obj.question.length, obj.description.length, obj.company.length,
+                        obj.frequency.length); %>
+                        <% for (let i=0; i < maxLength; i++) { %>
+                            <div class="p-5 text-black" data-aos="fade-up" data-aos-delay="">
+                                <h5>
+                                    Question : <%= obj.question[i]%>
+                                </h5>
+                                <p style="text-align: justify;">
+                                    <%= obj.description[i]%>
+                                </p>
+                                <p><b>Company Name : <%= obj.company[i]%></b></p>
+                                <div class="stars">
+                                    <b>Frequency: </b>
+                                    <% for (let j=1; j <=obj.frequency[i]; j++) { %>
+                                        <span class="star" data-value="<%= j %>">&#9733;</span>
+                                        <% } %>
+                                </div>
+                            </div>
+                            <hr data-aos="fade-up" data-aos-delay="">
+                          
+                            <% } %>
+                                <% }) %>
             </div>
         </div>
 
