--- a/views/adminCourseList.ejs
+++ b/views/adminCourseList.ejs
@@ -37,7 +37,8 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-      <div class="site-mobile-menu-body"></div>
+      <%- include('./adminSideBar.ejs')%>
+
     </div>
    
     
@@ -50,7 +51,7 @@
               <nav class="site-navigation position-relative text-right" role="navigation">
                 <%-include('./adminHomeHeader.js')%>
               </nav>
-             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
+             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right">
               <span class="icon-menu h3"></span></a>
   
             </div>
