--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -36,7 +36,8 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-      <div class="site-mobile-menu-body"></div>
+     <%- include('./adminSideBar.ejs')%>
+
     </div>
    
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
@@ -48,7 +49,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <%-include('./adminHomeHeader.js')%>
             </nav>
-           <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
+           <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right">
             <span class="icon-menu h3"></span></a>
 
           </div>
