--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -67,7 +67,7 @@
               <ul class="m-0 p-2">
                 <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="" class="nav-link">Courses</a></li>
-                <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
+                <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
                 <li><a href="/blog" class="nav-link">Blog</a></li>
                 <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
               </ul>
@@ -86,7 +86,7 @@
                             <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
                                 <li><a href="#courses-section" class="nav-link">Courses</a></li>
-                                <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
+                                <li><a href="/interview/interviewSubject" class="nav-link">InterviewPrep</a></li>
                                 <li><a href="/blog" class="nav-link">Blog</a></li>
                                 <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
                             </ul>
@@ -102,7 +102,7 @@
                             </ul>
                         </nav>
                         <a href="#"
-                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span
+                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right"><span
                                 class="icon-menu h3"></span></a>
                     </div>
                 </div>
