change color white to black

--- a/views/addBatch.ejs
+++ b/views/addBatch.ejs
@@ -50,7 +50,7 @@
               <nav class="site-navigation position-relative text-right" role="navigation">
                 <%-include('./employeeMgmtHomeHeader.js')%>
               </nav>
-             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right">
+             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
               <span class="icon-menu h3"></span></a>
   
             </div>
