--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -102,7 +102,7 @@
                             </ul>
                         </nav>
                         <a href="#"
-                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right"><span
+                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span
                                 class="icon-menu h3"></span></a>
                     </div>
                 </div>
