--- a/views/adminAddInterviewQuestions.ejs
+++ b/views/adminAddInterviewQuestions.ejs
@@ -54,7 +54,7 @@
                             <%-include('./adminHomeHeader.js')%>
                         </nav>
                         <a href="#"
-                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right">
+                            class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
                             <span class="icon-menu h3"></span></a>
 
                     </div>
