--- a/views/adminStudent.ejs
+++ b/views/adminStudent.ejs
@@ -51,7 +51,7 @@
               <nav class="site-navigation position-relative text-right" role="navigation">
                 <%-include('./adminHomeHeader.js')%>
               </nav>
-             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right">
+             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
               <span class="icon-menu h3"></span></a>
   
             </div>
