--- a/views/interviewSubject.ejs
+++ b/views/interviewSubject.ejs
@@ -75,7 +75,7 @@
                 <li class="cta"><a href="#contact-section" class="nav-link"><span>Contact Us</span></a></li>
               </ul>
             </nav>
-            <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-white float-right"><span
+            <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span
                 class="icon-menu h3"></span></a>
           </div>
         </div>
