--- a/views/employeeHome.ejs
+++ b/views/employeeHome.ejs
@@ -68,20 +68,38 @@
       
       <div class="slide-1" style="background-image: url('images/hero_1.jpg');" data-stellar-background-ratio="0.5">
         <div class="container">
-          <div class="row align-items-center">
-            <div class="col-12">
+          <div class="row align-items-center" >
+            <div class="col-12" style=" margin-top: -200px;">
               <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
                   <h3  data-aos="fade-up" data-aos-delay="100" class="text-white">EduSphere | Employee Panel</h3>
                   <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">
                   Welcome <%=email%>  
                   </p>
-                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5"><%=profile%></a></p>
-
+                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5"><%=profile%></a>
+                  <br><br>
+                    <span class="text-primary" style="color:crimson" data-aos="fade-up" data-aos-delay="300">
+                    <%=message%>
+                  </span>
+                  </p>
                 </div>
 
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
                  
+                  <form action="/employee/sendEnrollLink" method="post" class="form-box">
+                    <h3 class="h6 text-black mb-2">
+                      Send Enroll Link to <span style="color:red; font-size: 20px;">Student</span>
+                    </h3>
+                    
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Email Address" name="email" id="email"
+                        required />
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-primary p-2 w-100" value="Send" />
+                    </div>
+                  </form>
+
                 </div>
               </div>
             </div>
