--- a/views/viewStudentList.ejs
+++ b/views/viewStudentList.ejs
@@ -37,11 +37,10 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-      <%- include('./adminSideBar.ejs')%>
-
+      <div class="site-mobile-menu-body"></div>
     </div>
    
-
+    
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
       
         <div class="container-fluid">
@@ -49,7 +48,7 @@
             <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
             <div>
               <nav class="site-navigation position-relative text-right" role="navigation">
-                <%-include('./adminHomeHeader.js')%>
+                <%-include('./employeeMgmtHomeHeader.js')%>
               </nav>
              <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
               <span class="icon-menu h3"></span></a>
@@ -59,86 +58,88 @@
         </div>
         
       </header>
+  
 
-    
-    <div class="site-section" id="teachers-section" style="margin-top: -1px;">
-      <div class="container">
-
+    <div class="site-section" id="programs-section" style="margin-top: -1px;">
+      <br>
+        <div class="container">
         <div class="row mb-5 justify-content-center">
-          <div class="col-lg-7 mb-5 text-center"  data-aos="fade-up" data-aos-delay="">
-            <br><br>
-            <h4 class="text-black">Blog Section</h4>
-            <span><%=message%></span>
-          </div>
-        </div>
-
-        <div class="row">
-
-          <div class="col-md-4 col-lg-4 mb-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="teacher text-center">
-              <a href="/admin/createBlogForm">
-              <img src="images/blog_logo1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
-              <div class="py-2">
-                <h5 class="text-black">Create Blog</h5>
-                <!-- <p class="position">Physics Teacher</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p> -->
-              </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-md-8 col-lg-8 mb-6" style="margin-top: -50px;" data-aos="fade-up" data-aos-delay="300">
-            <div class="text-center">
-              <div class="table-responsive" style="max-height: 400px; overflow-y: auto; scrollbar-width: none;">
-                <table class="table table-sm table-bordered text-black" style="font-size: 14px;">
-                  <caption>
-                    
-                  </caption>
-                  <thead class="table-dark">
-                    <tr>
-                      <th scope="col">S.No</th>
-                      <th scope="col">Name</th>
-                      <th scope="col" colspan="2">Action</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <style>
-                      .custom-hover:hover {
-                          color: white !important;
-                      }
-                  </style>
-                  <%blogData.forEach((obj,index)=>{%>
-                    <tr>
-                      <td><%=index+1%></td>
-                      <td><%=obj.blogTitle%></td>
-                      <td>
-                        <form action="/admin/adminViewBlog" method="post">
-                          <input type="hidden" value="<%=JSON.stringify(obj)%>" name="blogData" id="blogData">
-                          <button class="btn btn-outline-primary p-2 text-black custom-hover">View & Update</button>
+          <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
+            <br>
+            <h4 class="text-black">Student List</h4>
+            <br>
+            <span style="color:green"><%=message%></span>
+            <%if(studentData.length==0){%>
+                <span style="color:crimson">No Record Found</span>
+            <%}else{%>
+            <table class="table" style="font-size: 12px; color: black;">
+                <thead>
+                  <tr>
+                    <th scope="col">S.No</th>
+                    <th scope="col" style="width:180px">EnrollId</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Gender</th>
+                    <th scope="col">DOB</th>
+                    <th scope="col">Contact</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Joining Date</th>
+                    <th scope="col">Guardian <br> Name</th>
+                    <th scope="col">Guardian <br> Contact</th>
+                    <th scope="col">Guardian <br> Address</th>
+                    <th scope="col">AdminVerify</th>
+                    <th scope="col">Fees Status</th>
+                    <th scope="col">BactchId</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <%studentData.forEach((obj,index)=>{%>
+                      <tr>
+                        <td><%=(index+1)%></td>
+                        <td><%=obj.enrollId%></td>
+                        <td><%=obj.name%></td>
+                        <td><%=obj.email%></td>
+                        <td><%=obj.gender%></td>
+                        <td><%=new Date(obj.date).toISOString().split("T")[0]%></td>
+                        <td><%=obj.contact%></td>
+                        <td><%=obj.address%></td>
+                        <td><%=obj.type%></td>
+                        <td><%=new Date(obj.joiningDate).toISOString().split("T")[0]%></td>
+                        <td><%=obj.gname%></td>
+                        <td><%=obj.gcontact%></td>
+                        <td><%=obj.gaddress%></td>
+                        <td><%=obj.adminVerify%></td>
+                        <form action="" method="post">
+                            <td>
+                                <input type="text" placeholder="Enter Due Amount" id="feesStatus" name="feesStatus">
+                            </td>
+                            <td>
+                                <select>
+                                    <option value="">Select Batch Id | Trainer </option>
+                                    <%batchNewData.forEach((batchObj)=>{%>
+                                        <option value="">
+                                            <%= batchObj.batchId %> |
+                                            <%= batchObj.trainerName %>
+                                        </option>
+                                    <%})%>
+                                </select>
+                            </td>
                         </form>
-                      </td>
-                      <td>
-                        <form action="/admin/adminDeleteBlog" method="post">
-                          <input type="hidden" value="<%=obj.blogId%>" name="blogId" id="blogId">
-                          <button class="btn btn-outline-primary p-2 text-black custom-hover">Delete</button>
-                        </form>
-                      </td>
-                    </tr>  
-
+                      </tr>
                   <%})%>
-                  
-                  </tbody>
-                </table>
-              </div>
-            </div>
+                </tbody>
+              </table>
+            <%}%>  
           </div>
-
-
         </div>
+      
+
       </div>
     </div>
 
-  
+    
+     
     <footer class="footer-section bg-white">
       <div class="container">
         <div class="row">
