--- a/views/home.ejs
+++ b/views/home.ejs
@@ -217,9 +217,9 @@
               <div class="col-12" style="height: 500px; position: relative;">
                 <div class="row align-items-center" style="position: relative; z-index: 1;">
                   <div class="col-lg-6 mb-4">
-                    <h1 data-aos="fade-up" data-aos-delay="100">Our TechStack</h1>
+                    <h1 data-aos="fade-up" data-aos-delay="100" class="text-primary">Our TechStack</h1>
                     <h1 data-aos="fade-up" data-aos-delay="100" id="output"></h1>
-                    <p class="mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <p class="mb-4" data-aos="fade-up" data-aos-delay="200" >
                       Simplify coding with a powerful language for web, data, and AI development. Also Build robust, scalable applications with a versatile object-oriented language.
                     </p>
                    
