--- a/views/interviewQuestions.ejs
+++ b/views/interviewQuestions.ejs
@@ -112,7 +112,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7 mb-5 text-center" data-aos="fade-up" data-aos-delay="">
                         <br><br>
-                        <h4 class="text-black">Interview Questions & Answers | ReactJS</h4>
+                        <h4 class="text-black">Interview Questions & Answers</h4>
                     </div>
                 </div>
 
