--- a/views/adminSideBar.ejs
+++ b/views/adminSideBar.ejs
@@ -12,7 +12,9 @@
           <ul class="dropdown-menu" aria-labelledby="settingsDropdown">
               <li><a class="dropdown-item" href="/admin/blogPage">Blog</a></li>
               <li><a class="dropdown-item" href="/admin/domainPage">Domain</a></li>
-          </ul>
+              <li><a class="dropdown-item" href="/admin/glimphsGallery">GlimpseGallery</a></li>
+
+            </ul>
       </li>
   
       <li><a href="" class="nav-link">Logout</a></li>
